enforce max-width on avatar editor to avoid overflow

--- a/app/styles/components/_image-editor.scss
+++ b/app/styles/components/_image-editor.scss
@@ -103,6 +103,7 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+  max-width: 600px;
   z-index: 101;
 
   .image-editor-container {
